--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section id="main">
         <div class="wrap">
-            <h1>A stylish splurge for women</h1>
+            <h1>AA stylish splurge for women</h1>
         </div>
     </section>
 
